Compiler/tests/good/print_list2.nx
type a : array 3 of [0 .. maxint];

val x : a filled by 0;

foreach i in [0 .. 2]
{
    x[i] := i + 1;
}


foreach i in [0 .. 2]
{
    printn(x[i]);
}
