Compiler/tests/bad/if2.nx
type t = [0 .. 10];

type a : array t of t;

if(a)
{
    print(42);
}